--- a/src/pages/Home/modules/EntendaTabagismo/EntendaTabagismo.css
+++ b/src/pages/Home/modules/EntendaTabagismo/EntendaTabagismo.css
@@ -1,24 +1,32 @@
 .entenda-tabagismo {
   padding: 30px 0;
-  background-color: "#FEFEFE";
+  background-color: #fefefe;
 }
 
 .entenda-tabagismo .container {
   display: flex;
   flex-direction: column;
   align-items: center;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 .entenda-tabagismo h2 {
-  text-align: left;
+  text-align: center;
   margin-bottom: 10px;
 }
 
 .entenda-tabagismo .subtitle {
-  text-align: left;
+  text-align: center;
   font-size: 18px;
   color: #666;
   margin-bottom: 20px;
+}
+
+.card-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 20px;
 }
 
 .btn-ver-mais {
@@ -26,9 +34,7 @@
   padding: 12px 24px;
   background-color: #fefefe;
   color: #0051b0;
-  border: 2px;
-  border-color: #0051b0;
-  border-style: solid;
+  border: 2px solid #0051b0;
   border-radius: 8px;
   font-size: 16px;
   cursor: pointer;
