--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,6 +1,5 @@
 .header {
   width: 100%;
-  position: fixed;
   padding: 4px;
   top: 0px;
   background-color: #b0c9e7;
@@ -8,6 +7,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  max-height: 100px;
 }
 
 .container {
@@ -30,6 +30,4 @@
   align-items: center;
   gap: 40px;
   width: 100%;
-}
-.nav-list-item {
 }
