--- a/src/pages/Home/modules/EntendaTabagismo/EntendaTabagismo.css
+++ b/src/pages/Home/modules/EntendaTabagismo/EntendaTabagismo.css
@@ -5,6 +5,7 @@
   max-width: 1200px;
   margin: 0 auto;
   padding-top: 36px;
+  background-color: red;
 }
 
 .entenda-tabagismo h2 {
@@ -26,7 +27,7 @@
 
 .card-grid {
   display: grid;
-  grid-template-columns: repeat(2, 1fr); /* Duas colunas com largura igual */
+  grid-template-columns: repeat(2, 1fr);
   gap: 32px 80px;
   padding-top: 66px;
   padding-bottom: 44px;
