--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,10 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+
+@media (min-width: 2560px) {
+    .FooterIcons {
+        max-width: 50%;
+        margin: 0 auto;
+    }
+}
+
 *{
     overflow-x: hidden;
 }
 footer{
     width: 100%;
-    max-width: 100%;
+    max-width: 2560px;
+    margin: 0 auto;
     height: 228px;
     background-color:  #003d84;
     display: flex;
@@ -30,7 +39,7 @@ footer a {
 }
 .FooterIcons{
     margin-bottom: 114px;
-    width: 93%;
+    width: 85%;
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
