--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -2,6 +2,17 @@
 *{
     overflow-x: hidden;
 }
+@media (min-width: 2560px) {
+    .FooterIcons{
+      max-width: 50%;
+    }
+  }
+  @media (min-width: 1200px) and (max-width: 2559px) {
+    .FooterIcons{
+      max-width: 1200px;
+      margin: 0 auto;
+    }
+  }
 footer{
     width: 100%;
     max-width: 100%;
