--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,6 +1,5 @@
 @media (min-width: 2560px) {
   .FooterIcons {
-    max-width: 50%;
     margin: 0 auto;
   }
 }
@@ -11,9 +10,9 @@
 
 footer {
   width: 100%;
-  max-width: 2560px;
+  max-width: auto;
   margin: 0 auto;
-  height: 228px;
+  height: auto;
   background-color: #003d84;
   display: flex;
   flex-wrap: wrap;
@@ -25,8 +24,8 @@ footer {
 }
 
 footer img {
-  max-width: 100%;
-  height: auto;
+  width: 72px;
+  height: 60.86px;
   margin-bottom: 20px;
 }
 
@@ -39,6 +38,10 @@ footer a {
   width: 100%;
   display: flex;
   flex-direction: column;
+  margin-top: 40px;
+  margin-left: 80px;
+  margin-right: 80px;
+  margin-bottom: 60px;
 }
 
 .navFooter {
@@ -52,7 +55,7 @@ footer a {
   flex-wrap: wrap;
   list-style: none;
   width: 100%;
-  gap: 20px;
+  gap: 40px;
 }
 
 .horizonRule {
@@ -66,11 +69,20 @@ footer a {
   display: flex;
   justify-content: space-between;
   width: 100%;
+  font-size: 16px;
+}
+
+.list {
+  display: flex;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  align-items: center;
 }
 
 .footer-text-right,
 .footer-text-left {
   width: auto;
+  font-size: 12px;
 }
 
 @media (max-width: 768px) {
