--- a/src/pages/Sobre-nos/SobreNos.css
+++ b/src/pages/Sobre-nos/SobreNos.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
 .HeroSobreNos{
-    padding: 90px;
+    padding: 9px;
     display: flex;
     flex-wrap: wrap;
     margin: 0 auto;
@@ -33,7 +33,8 @@ span{
 .HeroText{
     width: 45%;
     margin: 0 auto;
-    text-align:left
+    text-align:left;
+    margin-top:42px;
 }
 .HeroText h1{
     font-family: "Oswald", sans-serif;
@@ -61,13 +62,15 @@ span{
 }
 .Casal{
     width: 463px;
-    height: 309px;
-    margin-left: 9px;
+    height: 470px;
+    margin-left: -25px;
+    margin-bottom: 15px;
+    
 }
-.Card{
-    width: 430px;
-    margin-top: -55px;
-    margin-left: -15px;
+.waves{
+    margin-top: -150px;
+    margin-left: 720px;
+    height: 200px;
 }
 .HeroText{
     display: flex;
@@ -75,7 +78,8 @@ span{
 }
 
 .HeroText2{
-    width:70% ;
+    width:100% ;
+    padding: 20px;
 }
 .HeroText2 h2{
     font-family: "Oswald", sans-serif;
@@ -105,7 +109,7 @@ span{
     padding: 45px;
     width: 69%;
     text-align: start;
-    margin-left: 69px;
+    margin-left: 13px;
 }
 .Miolo h3{
     font-family: "Oswald", sans-serif;
@@ -135,23 +139,25 @@ span{
     font-weight: 600;
     font-size: 20px;
 }
-.CardSobreNos a {
+.LinkedinIbson{
+    margin-top: 20px;
+    margin-left: 40px;
+    width: 50%;
+    display: grid;
+    grid-template-columns: auto auto;
+    align-items: center;
+    padding-top:-25px ;
+}
+.LinkedinIbson a {
     font-family: "Inter", sans-serif;
-    text-align: center;
     text-decoration: none;
     color: #2B2B2B;
     font-weight: 500;
-    margin: 0 auto;
-    width: 75%;
-
-   
 }
 .Ibson{
     position: relative;
     width: 150.92px;
     height: 150.92px;
-    z-index: 1;
-    background-color:#A6C4E8; ;
     border-radius: 50%;
     margin: 0 auto;
 }
@@ -167,6 +173,7 @@ span{
 .CardVermelhoRubi {
     background-color: #FFFFFF;
     width: 256px;
+    height: 240px;
     padding: 10px;
     border-radius: 10px;
     box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
@@ -194,20 +201,24 @@ span{
     text-decoration: none;
     font-weight: 500;
     color: #2B2B2B;
-    margin-bottom: -55px;
+    padding-top: 2px;
+    margin-right: 70px;
 }
-
+.LogoLinkedin{
+    display: grid;
+    grid-template-columns: auto auto;
+    align-items: center;
+    margin-top: 50px;
+}
 .LogoLinkedin img{
     width: 24px;
     height: 24px;
-    margin-top: 45px;
+    margin-left: 60px;
 }
 .LogoLinkedin1 img{
-    display: inline;
-    width: 24px;
-    height: 24px;
-    margin-top: 45px;
-    margin-left: -95px;
+    width: 22px;
+    height: 60px;
+    margin-left: 32px;
 }
 
 
