--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -8,6 +8,17 @@
   align-items: center;
   justify-content: center;
   max-height: 100px;
+
+  position: sticky;
+  top: 0;
+  left: 0;
+  z-index: 2;
+
+  transition: 0.33s;
+}
+
+.shadow-header {
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
 }
 
 .container {
