--- a/src/pages/Informe-se/modules/TitleSection/title.module.css
+++ b/src/pages/Informe-se/modules/TitleSection/title.module.css
@@ -1,4 +1,4 @@
-.informe-se .container {
+.informe_se .container {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -6,7 +6,7 @@
   margin: 0 auto;
 }
 
-.informe-se h2 {
+.informe_se h2 {
   text-align: center;
   margin-bottom: 10px;
   font-family: Oswald;
@@ -14,7 +14,7 @@
   padding-top: 72px;
 }
 
-.informe-se .subtitle {
+.informe_se .subtitle {
   text-align: center;
   font-size: 18px;
   color: #666;
