--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -55,3 +55,55 @@
   text-decoration: none;
   color: inherit;
 }
+
+
+@media (max-width: 393px) {
+  .container img {
+    width: 50%;
+  }
+  .nav-list {
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    gap: 5px;
+  }
+  .nav-list li {
+    font-size: 10px;
+    white-space: nowrap;
+    padding: 6px;
+  }
+}
+
+@media (max-width: 480px) {
+  .container img {
+    width: 50%;
+  }
+  .nav-list {
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    gap: 5px;
+  }
+  .nav-list li {
+    font-size: 10px;
+    white-space: nowrap;
+    padding: 6px;
+  }
+}
+
+@media (max-width: 360px) {
+  .container img {
+    width: 30%;
+  }
+  .nav-list {
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    gap: 5px;
+  }
+  .nav-list li {
+    font-size: 9px;
+    white-space: nowrap;
+    padding: 6px;
+  }
+}
