--- a/src/pages/Sobre-nos/SobreNos.css
+++ b/src/pages/Sobre-nos/SobreNos.css
@@ -1,225 +1,388 @@
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
 
-.HeroSobreNos{
-    padding: 9px;
-    display: flex;
-    flex-wrap: wrap;
-    margin: 0 auto;
-    background: linear-gradient(to top right, #FFFFFF, #FFF7E6);
+.HeroSobreNos {
+  padding: 9px;
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 auto;
+  background: linear-gradient(to top right, #ffffff, #fff7e6);
 }
-.TimeVermelhoRubi{
-    font-family: "Oswald", sans-serif;
-    background-color:#E6EEF7;
-    color: #001C3E;
-    text-align: center;
-    font-size: 36px;
-    font-weight: 600;
-    margin-bottom: -45px;
+.TimeVermelhoRubi {
+  font-family: "Oswald", sans-serif;
+  background-color: #e6eef7;
+  color: #001c3e;
+  text-align: center;
+  font-size: 36px;
+  font-weight: 600;
+  margin-bottom: -45px;
 }
-.CigarroZero{
-    color: #00418d;
-    display: block;
-    text-transform: uppercase;
-    font-weight: 600;
-    font-size: 1.7em;
+.CigarroZero {
+  color: #00418d;
+  display: block;
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: 1.7em;
 }
-.ImgHero{
-    display: flex;
-    flex-direction: column;
-    width: 40%;
-    margin: 0 auto;
+.ImgHero {
+  display: flex;
+  flex-direction: column;
+  width: 40%;
+  margin: 0 auto;
 }
-.HeroText{
-    width: 45%;
-    margin: 0 auto;
-    text-align:left;
-    margin-top:42px;
+.HeroText {
+  width: 45%;
+  margin: 0 auto;
+  text-align: left;
+  margin-top: 42px;
 }
-.HeroText h1{
-    font-family: "Oswald", sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    color: #1C1C1C;
-    padding: 20px;
-    text-align: left;
-    margin-left: -21px;
+.HeroText h1 {
+  font-family: "Oswald", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  color: #1c1c1c;
+  padding: 20px;
+  text-align: left;
+  margin-left: -21px;
 }
-.HeroText h2{
-    font-family: "Oswald", sans-serif;
-    color: #001C3E;
-    font-weight: 400;
-    padding: 2px;
-}
-
-.HeroText p{
-   color: #000000;
-   font-weight: 500;
-   font-family: "Inter", sans-serif;
-   width: 576px;
-   height: 149px;
-   line-height: 1.5;
-}
-.Casal{
-    width: 463px;
-    height: 470px;
-    margin-left: -25px;
-    margin-bottom: 15px;
-    
-}
-.waves{
-    margin-top: -150px;
-    margin-left: 720px;
-    height: 200px;
-}
-.HeroText{
-    display: flex;
-    flex-direction: column;
+.HeroText h2 {
+  font-family: "Oswald", sans-serif;
+  color: #001c3e;
+  font-weight: 400;
+  padding: 2px;
 }
 
-.HeroText2{
-    width:100% ;
-    padding: 20px;
+.HeroText p {
+  color: #000000;
+  font-weight: 500;
+  font-family: "Inter", sans-serif;
+  width: 576px;
+  height: 149px;
+  line-height: 1.5;
 }
-.HeroText2 h2{
-    font-family: "Oswald", sans-serif;
-    color: #001C3E;
-    font-weight: 400;
-    padding: 2px;
-    margin-left:32px;
+.Casal {
+  width: 463px;
+  height: 470px;
+  margin-left: -25px;
+  margin-bottom: 15px;
 }
-.HeroText2 p{
-    color: #000000;
-    font-weight: 500;
-    font-family: "Inter", sans-serif;
-    width: 576px;
-    height: 149px;
-    line-height: 1.5;
-    margin-left: 32px;
+.waves {
+  margin-top: -150px;
+  margin-left: 720px;
+  height: 200px;
+}
+.HeroText {
+  display: flex;
+  flex-direction: column;
 }
 
-.SobreNos{
-    background-color: #E6EEF7;
-    display: flex;
-    flex-wrap: wrap;
+.HeroText2 {
+  width: 100%;
+  padding: 20px;
 }
-.Miolo{
-    display: flex;
-    flex-direction: column;
-    padding: 45px;
-    width: 69%;
-    text-align: start;
-    margin-left: 13px;
+.HeroText2 h2 {
+  font-family: "Oswald", sans-serif;
+  color: #001c3e;
+  font-weight: 400;
+  padding: 2px;
+  margin-left: 32px;
 }
-.Miolo h3{
-    font-family: "Oswald", sans-serif;
-    font-weight: 600;
-    font-size: 44px;
-    color: #001c3e;
+.HeroText2 p {
+  color: #000000;
+  font-weight: 500;
+  font-family: "Inter", sans-serif;
+  width: 576px;
+  height: 149px;
+  line-height: 1.5;
+  margin-left: 32px;
+}
 
+.SobreNos {
+  background-color: #e6eef7;
+  display: flex;
+  flex-wrap: wrap;
 }
-.Miolo p{
-    font-family: "Oswald", sans-serif;
-    line-height: 30px;
+.Miolo {
+  display: flex;
+  flex-direction: column;
+  padding: 45px;
+  width: 69%;
+  text-align: start;
+  margin-left: 13px;
 }
-.CardSobreNos{
-    background-color: #FFFFFF;
-    width: 258px;
-    height: 297px;
-    padding: 10px;
-    margin-top: 50px;
-    border-radius: 10px;
-    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
-    display: flex;
-    flex-direction: column;
+.Miolo h3 {
+  font-family: "Oswald", sans-serif;
+  font-weight: 600;
+  font-size: 44px;
+  color: #001c3e;
 }
-.CardSobreNos p{
-    text-align: center;
-    font-family: "Oswald", sans-serif;
-    font-weight: 600;
-    font-size: 20px;
+.Miolo p {
+  font-family: "Oswald", sans-serif;
+  line-height: 30px;
 }
-.LinkedinIbson{
-    margin-top: 20px;
-    margin-left: 40px;
-    width: 50%;
-    display: grid;
-    grid-template-columns: auto auto;
-    align-items: center;
-    padding-top:-25px ;
+.CardSobreNos {
+  background-color: #ffffff;
+  width: 258px;
+  height: 297px;
+  padding: 10px;
+  margin-top: 50px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
+  display: flex;
+  flex-direction: column;
+}
+.CardSobreNos p {
+  text-align: center;
+  font-family: "Oswald", sans-serif;
+  font-weight: 600;
+  font-size: 20px;
+}
+.LinkedinIbson {
+  margin-top: 20px;
+  margin-left: 40px;
+  width: 50%;
+  display: grid;
+  grid-template-columns: auto auto;
+  align-items: center;
+  padding-top: -25px;
 }
 .LinkedinIbson a {
-    font-family: "Inter", sans-serif;
-    text-decoration: none;
-    color: #2B2B2B;
-    font-weight: 500;
+  font-family: "Inter", sans-serif;
+  text-decoration: none;
+  color: #2b2b2b;
+  font-weight: 500;
 }
-.Ibson{
-    position: relative;
-    width: 150.92px;
-    height: 150.92px;
-    border-radius: 50%;
-    margin: 0 auto;
+.Ibson {
+  position: relative;
+  width: 150.92px;
+  height: 150.92px;
+  border-radius: 50%;
+  margin: 0 auto;
 }
 .VermelhoRubi {
-    padding: 125px;
-    background-color: #E6EEF7;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between; 
-    gap: 20px; 
+  padding: 125px;
+  background-color: #e6eef7;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 20px;
 }
 
 .CardVermelhoRubi {
-    background-color: #FFFFFF;
-    width: 256px;
-    height: 240px;
-    padding: 10px;
-    border-radius: 10px;
-    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
+  background-color: #ffffff;
+  width: 256px;
+  height: 240px;
+  padding: 10px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
 }
 .CardVermelhoRubi img {
-    border-radius: 50%;
-    width: 100px;
-    height: 100px;
-    margin-left: 67px;
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+  margin-left: 67px;
 }
-.Nome{
-    font-family: "Inter", sans-serif;
-    text-align: center;
-    font-weight: 700;
+.Nome {
+  font-family: "Inter", sans-serif;
+  text-align: center;
+  font-weight: 700;
 }
-.Cargo{
-    font-family: "Inter", sans-serif;
-    color: #2B2B2B;
-    font-weight: 400;
-    font-size: 16px;
-    text-align: center;
-    display:block ;
+.Cargo {
+  font-family: "Inter", sans-serif;
+  color: #2b2b2b;
+  font-weight: 400;
+  font-size: 16px;
+  text-align: center;
+  display: block;
 }
-.CardVermelhoRubi a{
-    font-family: "Inter", sans-serif;
-    text-decoration: none;
-    font-weight: 500;
-    color: #2B2B2B;
-    padding-top: 2px;
-    margin-right: 70px;
+.CardVermelhoRubi a {
+  font-family: "Inter", sans-serif;
+  text-decoration: none;
+  font-weight: 500;
+  color: #2b2b2b;
+  padding-top: 2px;
+  margin-right: 70px;
 }
-.LogoLinkedin{
-    display: grid;
-    grid-template-columns: auto auto;
-    align-items: center;
-    margin-top: 50px;
+.LogoLinkedin {
+  display: grid;
+  grid-template-columns: auto auto;
+  align-items: center;
+  margin-top: 50px;
 }
-.LogoLinkedin img{
-    width: 24px;
-    height: 24px;
-    margin-left: 60px;
+.LogoLinkedin img {
+  width: 24px;
+  height: 24px;
+  margin-left: 60px;
 }
-.LogoLinkedin1 img{
-    width: 22px;
-    height: 60px;
-    margin-left: 32px;
+.LogoLinkedin1 img {
+  width: 22px;
+  height: 60px;
+  margin-left: 32px;
 }
 
+@media (max-width: 393px) {
+  .HeroSobreNos {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+  }
+  .Casal {
+    display: flex;
+    justify-content: center;
+    margin-left: -140px;
+    width: 400px;
+    height: 350px;
+  }
+  .HeroText {
+    font-size: 11px;
+    margin-left: 40px;
+    margin-top: 50px;
+  }
+  .CigarroZero {
+    white-space: nowrap;
+    margin-bottom: 5px;
+  }
+  .HeroText h2 {
+    margin-bottom: 5px;
+    font-size: 16px;
+  }
+  .HeroText p {
+    width: -50px;
+    font-size: 10px;
+    width: 300px;
+  }
+  .HeroText2 {
+    font-size: 12px;
+    margin-left: -40px;
+    margin-bottom: 50px;
+  }
+  .HeroText2 h2 {
+    margin-bottom: 5px;
+    font-size: 16px;
+  }
+  .HeroText2 p {
+    width: -50px;
+    font-size: 10px;
+    width: 300px;
+    white-space: nowrap;
+  }
+
+  .Miolo h3 {
+    white-space: nowrap;
+    font-size: 25px;
+  }
+  .Miolo p {
+    font-size: 14px;
+    white-space: normal;
+    width: 250px;
+    margin-top: 20px;
+  }
+  .CardSobreNos {
+    margin-left: 60px;
+    margin-bottom: 50px;
+  }
+  .VermelhoRubi {
+    margin-left: -50px;
+  }
+  
+}
+
+@media (max-width: 480px) {
+  .HeroSobreNos {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+  }
+  .Casal {
+    display: flex;
+    justify-content: center;
+    margin-left: -140px;
+    width: 400px;
+    height: 350px;
+  }
+  .HeroText {
+    font-size: 11px;
+    margin-left: 40px;
+    margin-top: 50px;
+  }
+  .CigarroZero {
+    white-space: nowrap;
+    margin-bottom: 5px;
+  }
+  .HeroText h2 {
+    margin-bottom: 5px;
+    font-size: 16px;
+  }
+  .HeroText p {
+    width: -50px;
+    font-size: 10px;
+    width: 300px;
+  }
+  .HeroText2 {
+    font-size: 12px;
+    margin-left: -40px;
+    margin-bottom: 50px;
+  }
+  .HeroText2 h2 {
+    margin-bottom: 5px;
+    font-size: 16px;
+  }
+  .HeroText2 p {
+    width: -50px;
+    font-size: 10px;
+    width: 300px;
+    white-space: nowrap;
+  }
+
+  .Miolo h3 {
+    white-space: nowrap;
+    font-size: 25px;
+  }
+  .Miolo p {
+    font-size: 14px;
+    white-space: normal;
+    width: 250px;
+    margin-top: 20px;
+  }
+  .CardSobreNos {
+    margin-left: 60px;
+    margin-bottom: 50px;
+  }
+  .VermelhoRubi {
+    margin-left: -50px;
+  }
+  
+}
+
+@media (max-width: 360px) {
+  .Casal {
+    display: flex;
+    justify-content: center;
+    width: 370px;
+    height: 350px;
+  }
+  .HeroText {
+   margin-left: 10px;
+  }
+  .HeroText h1 {
+    white-space: nowrap;
+  }
+  .HeroText2 {
+    font-size: 12px;
+    margin-left: -40px;
+    margin-bottom: 50px;
+    padding: 10px;
+    width: 380px;
+  }
+  .Miolo h3 {
+    font-size: 20px;
+  }
+  .TimeVermelhoRubi {
+    font-size: 25px;
+  }
+}
 
